WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60343
Crash on Recovery System when trying to load page that includes media element
https://bugs.webkit.org/show_bug.cgi?id=60343
Summary
Crash on Recovery System when trying to load page that includes media element
Eric Carlson
Reported
2011-05-05 23:19:02 PDT
<
rdar://problem/9390864
> It must be possible to load a page with media elements on a system that does not include AVFoundation.framework.
Attachments
Patch
(2.79 KB, patch)
2011-05-05 23:21 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2011-05-05 23:21:10 PDT
Created
attachment 92547
[details]
Patch
Eric Carlson
Comment 2
2011-05-05 23:22:44 PDT
http://trac.webkit.org/changeset/85918
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug